syntax = "proto3";

package proto;

option go_package = "./mocks3";

service FileService {
    rpc GetFile (FileSize) returns (stream FileBlob) {}
    rpc PutFile (stream FileBlob) returns (FileSize) {}
}

message FileSize {
    int64 size = 1;
}

message FileBlob {
    bytes blob = 1;
}
